# Vinetrimmer-Playready-V2.0

./: .gitignore  How.to.use.txt  LICENSE  README.md  benchmark.py  download.Amazon.bat  download.AppleTVPlus.bat  download.CanalPlus.bat  download.DisneyPlus.bat  download.FranceTV.bat  download.Hulu.bat  download.NowTV.IT.bat  download.ParamountPlus.bat  download.Peacock.bat  help.bat  install.bat  install.sh  install_binaries.py  pyproject.toml  update_binaries.bat
scripts/: AddKeysToKeyVault.py  MergeKeyStores.py  UpdateLocalKeyVault.py  download.Amazon.sh  download.AppleTVPlus.sh  download.CanalPlus.sh  download.DisneyPlus.sh  download.FranceTV.sh  download.Hulu.sh  download.Max.bat  download.Max.sh  download.NowTV.IT.sh  download.ParamountPlus.sh  download.Peacock.sh  download.TimVision.bat  download.TimVision.sh  help.sh  update_binaries.py
vinetrimmer/: constants.py  vinetrimmer.py  vinetrimmer.yml
vinetrimmer/commands/: dl.py
vinetrimmer/config/: __init__.py  vinetrimmer.yml
vinetrimmer/config/services/: francetv.yml
vinetrimmer/devices/mtc_mtc_atv_atv_sl3000/: PR.json
vinetrimmer/objects/: tracks.py  vaults.py
vinetrimmer/parsers/: ism.py  m3u8.py  mpd.py
vinetrimmer/services/: amazon.py  appletvplus.py  canalplus.py  disneyplus.py  francetv.py  hulu.py  paramountplus.py  peacock.py  skyshowtime.py  timvision.py
vinetrimmer/utils/: AtomicSQL.py  __init__.py  io.py  ttml2ssa.py
vinetrimmer/utils/playready/: cdm.py
